--- a/src/components/Meals/MealsButton.module.css
+++ b/src/components/Meals/MealsButton.module.css
@@ -14,7 +14,11 @@
         font: inherit;
         color: white;
         background-color: #9f5ccc;
-        border: 1px solid #9f5ccc;
+        border: 1px solid #4b1e68;
         border-radius: 4px;
         padding: 0.5rem 2.5rem;
+}
+
+.auction-reference button:hover{
+    background-color: #4b1e68;
 }
