--- a/src/components/User/UserReview.module.css
+++ b/src/components/User/UserReview.module.css
@@ -31,7 +31,7 @@
     max-width: 10rem;
     max-height: 25px;
     border-radius: 6px;
-    background-color: #36174a;
+    background-color: #171f4a;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
     padding: 1rem;
     text-align: center;
